# atelier

./: .gitignore  AtelierConfig.cmake  CMakeLists.txt  LICENSE.txt
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/gpu/: CMakeLists.txt
lib/gpu/opengl45/: CMakeLists.txt
lib/gpu/opengl45/private/: opengl45_gpu_buffer.cpp  opengl45_gpu_buffer.hpp  opengl45_gpu_device.cpp  opengl45_gpu_pipeline_state.cpp  opengl45_gpu_pipeline_state.hpp  opengl45_gpu_texture.cpp  opengl45_gpu_texture.hpp  opengl45_helpers.cpp  opengl45_helpers.hpp
lib/gpu/opengl45/public/atelier/gpu/: opengl45_gpu_device.hpp
lib/runtime/: CMakeLists.txt
lib/runtime/cmake/: current_version,cmake.hpp  current_version.cmake.hpp
lib/runtime/private/: application.cpp  control_node.cpp  gpu_texture.cpp  gpu_vertex_layout.cpp  hash.cpp  scene.cpp  scene_node.cpp  scene_node_errors.cpp  scene_node_sibling_iterator.cpp  scene_tree.cpp  string_name.cpp  version.cpp
lib/runtime/public/atelier/: application.hpp  control_node.hpp  frame_duration.hpp  gpu_buffer.hpp  gpu_device.hpp  gpu_pipeline_state.hpp  gpu_texture.hpp  gpu_vertex_layout.hpp  hash.hpp  scene.hpp  scene_node.hpp  scene_node_errors.hpp  scene_node_sibling_iterator.hpp  scene_tree.hpp  string_name.hpp  version.hpp
